Fixed text wrapping problem on input addition on some browsers.

--- a/client/styles/input.scss
+++ b/client/styles/input.scss
@@ -77,6 +77,7 @@ label {
     align-content: center;
     background-color: var(--s-button);
     border: 1px solid var(--s-button-border);
+    text-wrap: nowrap;
     // z-index: -1;
 }
 
